--- a/contacts.html
+++ b/contacts.html
@@ -8,7 +8,7 @@
 <!-- Mirrored from www.yourgreen.com/contacts.php by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 30 Mar 2023 05:11:49 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
-		<title>yourgreen</title>
+		<title>Yourgreen</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="description" content="">
 
